Changed the network rule port attribute to be a string to handle wildcards

--- a/com.waratek.rules.ui.eef/src-gen/com/waratek/rules/providers/rulesMessages_fr.properties
+++ b/com.waratek.rules.ui.eef/src-gen/com/waratek/rules/providers/rulesMessages_fr.properties
@@ -20,29 +20,29 @@ ClassLinkPropertiesEditionPart_PropertiesGroupLabel=Properties
 Native_PropertiesEditionPart_PropertiesGroupLabel=Properties
 SQLInjectionPropertiesEditionPart_PropertiesGroupLabel=Properties
 RuleDocument_ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-RuleDocument_Part_Title=Base
+RuleDocument_Part_Title=RuleDocument
 File_ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-File_Part_Title=Base
+File_Part_Title=File
 Network_ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-Network_Part_Title=Base
+Network_Part_Title=Network
 ReflectPackage_ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-ReflectPackage_Part_Title=Base
+ReflectPackage_Part_Title=ReflectPackage
 ReflectClass_ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-ReflectClass_Part_Title=Base
+ReflectClass_Part_Title=ReflectClass
 ReflectConstructor_ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-ReflectConstructor_Part_Title=Base
+ReflectConstructor_Part_Title=ReflectConstructor
 ReflectMethod_ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-ReflectMethod_Part_Title=Base
+ReflectMethod_Part_Title=ReflectMethod
 ReflectField_ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-ReflectField_Part_Title=Base
+ReflectField_Part_Title=ReflectField
 ThrowableClass_ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-ThrowableClass_Part_Title=Base
+ThrowableClass_Part_Title=ThrowableClass
 ClassLink_ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-ClassLink_Part_Title=Base
+ClassLink_Part_Title=ClassLink
 Native__ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-Native__Part_Title=Base
+Native__Part_Title=Native
 SQLInjection_ReadOnly=Cette propri\u00E9t\u00E9 est en lecture seule
-SQLInjection_Part_Title=Base
+SQLInjection_Part_Title=SQLInjection
 RuleDocumentPropertiesEditionPart_NameLabel=Name : 
 RuleDocumentPropertiesEditionPart_ScopeLabel=Scope : 
 FilePropertiesEditionPart_IdLabel=Id : 
